# render0

./: Cargo.toml  LICENSE  README.md  justfile
fundamentals-cg/: coordinate-transform.md
src/: camera.rs  color.rs  draw.rs  lib.rs  line.rs  main.rs  model.rs  triangle.rs
src/pbr/: mod.rs  readme.md
src/raytracing/: mod.rs
src/raytracing/radiometry/: mod.rs  readme.typ
src/shading/: readme.md
src/shadows/: enviornment_mapping.rs  mod.rs  shadow_mapping.rs
src/utils/: draw.rs  mod.rs  model.rs  triangle.rs
